<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.jhoncasique.calculator.calculator.CalculatorOutputView
        android:id="@+id/calculatorOutputView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_trash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_divide"
        app:layout_constraintTop_toBottomOf="@+id/calculatorOutputView" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:item_text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@+id/key_clear" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:item_text="@string/key_4"
        app:layout_constraintTop_toBottomOf="@+id/key_7" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:item_text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintBottom_toTopOf="@id/key_percent"
        app:layout_constraintTop_toBottomOf="@+id/key_4" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@+id/key_1" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_divide"
        app:layout_constraintStart_toEndOf="@+id/key_clear"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_multiply"
        app:layout_constraintTop_toBottomOf="@+id/calculatorOutputView" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@+id/key_clear"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@+id/key_divide" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@+id/key_clear"
        app:layout_constraintBottom_toTopOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@+id/key_8" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@+id/key_clear"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@+id/key_5" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_clear"
        app:layout_constraintEnd_toStartOf="@id/key_space"
        app:layout_constraintTop_toBottomOf="@+id/key_2" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_multiply"
        app:layout_constraintEnd_toStartOf="@id/key_delete"
        app:layout_constraintStart_toEndOf="@+id/key_divide"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@+id/calculatorOutputView" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@+id/key_divide"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@+id/key_multiply" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@+id/key_divide"
        app:layout_constraintBottom_toTopOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@+id/key_9" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_text="@string/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_equal"
        app:layout_constraintStart_toEndOf="@+id/key_divide"
        app:layout_constraintBottom_toTopOf="@id/key_space"
        app:layout_constraintTop_toBottomOf="@+id/key_6" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_delete"
        app:layout_constraintBottom_toTopOf="@id/key_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_multiply"
        app:layout_constraintTop_toBottomOf="@+id/calculatorOutputView" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_minus"
        app:layout_constraintBottom_toTopOf="@id/key_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_9"
        app:layout_constraintTop_toBottomOf="@+id/key_delete" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_plus"
        app:layout_constraintBottom_toTopOf="@id/key_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@+id/key_minus" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:item_icon="@drawable/ic_equal"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@+id/key_plus" />

    <com.jhoncasique.calculator.CalculatorInputView
        android:id="@+id/key_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_3" />






</androidx.constraintlayout.widget.ConstraintLayout>
